[package]
name = "splix"
version = "0.1.0"
edition = "2021"
authors = ["Raymond Tian rymdtian@gmail.com"]
license = "MIT"
description = "Split images into grids of rows and columns."
readme = "README.md"
homepage = "https://github.com/raymondytian/splix"
repository = "https://github.com/raymondytian/splix"
keywords = ["cli", "image", "split"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
